# tp-notes-code

./: .gitignore  .gitmodules
docs/: CNAME
week01/: 01-task.sh  02-task.sh  03-task.sh  05-task.sh  06-task.sh
week02/: README.md
week04/00-FactoryMethod/: character.cpp  character.hpp  creator.cpp  creator.hpp  diagram-factory_method.drawio  main.cpp
week04/01-AbstractFactory/: character_creator.cpp  character_creator.hpp  diagram-abstract_factory.drawio  elf.cpp  elf.hpp  human.cpp  human.hpp  mage_creator.cpp  mage_creator.hpp  main.cpp  swordman_creator.cpp  swordman_creator.hpp
week04/02-Builder/: builder.cpp  character.hpp  diagram-builder.drawio
week04/03-Prototype/: diagram-prototype.drawio  main.cpp  spawner.cpp
week04/04-Singleton/: diagram-singleton.drawio  main.cpp
week05/00-shell-script/00-hello-world/: main.cpp
week05/00-shell-script/01-check-includes/: build.sh  main.cpp
week05/00-shell-script/02-cpp-advanced/: build.sh  clean.sh
week05/00-shell-script/03-python-project/: main.py  run.sh
week05/00-shell-script/04-static_or_shared_libs/: README.md  build.sh  calc.cpp  calc.hpp  main.cpp  shared-build.sh  static-build.sh
week05/01-make/01-advanced/: Makefile
week05/01-make/01-advanced/src/: enemy.cpp  enemy.hpp  spawner.hpp
week05/02-cmake/00-hello_world/: CMakeLists.txt  Makefile
week05/02-cmake/01-advanced/: CMakeLists.txt
week05/02-cmake/01-advanced/include/: singleton.hpp
week05/02-cmake/02-super_advanced/: CMakeLists.txt  main.cpp
week05/02-cmake/02-super_advanced/bin2/: BuilderProject
week05/02-cmake/02-super_advanced/pattern/: CMakeLists.txt
week05/02-cmake/02-super_advanced/pattern/director/: director.cpp
week05/02-cmake/03-add_other_libraries/: CMakeLists.txt  main.cpp
week05/02-cmake/05-create-libs/: CMakeLists.txt  main.cpp
week05/02-cmake/05-create-libs/src/: singleton.cpp
week05/02-cmake/06-options/: CMakeLists.txt  main.cpp
week05/02-cmake/06-options/include/: builder.hpp  director.hpp
week05/02-cmake/06-options/src/: character.cpp
week05/02-cmake/07-custom/: CMakeLists.txt
week05/02-cmake/08-gtest/: CMakeLists.txt  main.cpp
week05/02-cmake/08-gtest/include/: adaptee.hpp
week05/02-cmake/08-gtest/tests/: TestWithFixtures.h
week05/02-cmake/09-conan/: CMakeLists.txt  README.md  build.sh  conanfile.txt  main.cpp
week05/03-poetry/00-hello_world/: pyproject.toml
week06/00-Adapter/: CMakeLists.txt  diagram-adapter.drawio  main.cpp
week06/00-Adapter/src/: adapter.cpp  adapter.hpp  sensor.cpp  sensor.hpp
week06/01-Facade/: diagram-facade.drawio
week06/02-Bridge/: CMakeLists.txt  diagram-bridge.drawio  main.cpp
week06/02-Bridge/src/: Circle.cpp  Circle.hpp  Drawer.cpp  Drawer.hpp  DrawerGL.cpp  DrawerGL.hpp  DrawerSFML.cpp  DrawerSFML.hpp  Shape.hpp
week06/03-Composite/: diagram-composite.drawio  main.cpp
week06/03-Composite/src/: GroupUnit.cpp  GroupUnit.hpp  Leaf.cpp  Leaf.hpp  Unit.cpp  Unit.hpp
week06/05-FlyWeight/: diagram-flyweight.drawio  main.cpp
week06/05-FlyWeight/src/: Flyweight.cpp  Flyweight.hpp  FlyweightFactory.cpp  FlyweightFactory.hpp  SharedState.cpp  SharedState.hpp  UniqueState.cpp  UniqueState.hpp
week07/cpp/: CMakeLists.txt
week07/cpp/00-base/: CMakeLists.txt  main.cpp
week07/cpp/01-base_plus/: CMakeLists.txt  main.cpp
week07/cpp/01-base_plus/src/: MyArray.cpp  MyArray.hpp
week07/cpp/02-advanced/: CMakeLists.txt
week07/cpp/02-advanced/src/: adaptee.cpp
week07/cpp/02-advanced/tests/: TestWithFixtures.cpp
week07/cpp/03-mock/: CMakeLists.txt  main.cpp
week07/cpp/03-mock/include/: singleton.hpp
week07/cpp/03-mock/src/: singleton.cpp
week07/cpp/03-mock/tests/: MockSingleton.cpp  MockSingleton.h  main.cpp
week07/cpp/04-cppcheck/: leak0.cpp  leak1.cpp
week07/cpp/05-cov/: Makefile  main.cpp  main.gcda  main.gcno  report.info  script.sh
week07/python/00-base/: conftest.py
week07/python/00-base/tests/: test_example.py
week07/python/03-api/: main.py
week07/python/03-api/lib/: __init__.py  transform_results.py  yandex_contest_scrapper.py
week07/python/03-api/tests/: test_transform_results.py  (+1 more)
week08/00-command/: diagram-command.drawio  main.cpp
week08/00-command/src/: Command.cpp  Command.h  Server.cpp  Server.h
week08/01-cor/: CMakeLists.txt  diagram-cof.drawio  main.cpp
week08/01-cor/include/: BaseHandler.h  HandlerAccess.h  HandlerLogin.h  HandlerPassword.h  IHandler.h  UserEvent.h
week08/01-cor/src/: BaseHandler.cpp  HandlerAccess.cpp  HandlerLogin.cpp  HandlerPassword.cpp  IHandler.cpp  UserEvent.cpp
week08/02-strategy/: CMakeLists.txt  diagram-strategy.drawio  main.cpp
week08/02-strategy/include/: DataSaver.h  Dumper.h  JsonDumper.h  TextDumper.h
week08/02-strategy/src/: DataSaver.cpp  JsonDumper.cpp  TextDumper.cpp
week09/00-state/: CMakeLists.txt  main.cpp
week09/00-state/include/: BookingContext.h  CancellationTokenSource.h  ProcessingResult.h
week09/00-state/include/states/: BookedState.h  BookingState.h  ClosedState.h  NewState.h  PendingState.h
week09/00-state/src/: BookingContext.cpp  CancellationTokenSource.cpp
week09/00-state/src/states/: BookedState.cpp  BookingState.cpp  ClosedState.cpp  NewState.cpp  PendingState.cpp
week09/01-visitor/: diagram-visitor.drawio  main.cpp
week09/01-visitor/include/: AreaVisitor.h  Circle.h  Rectangle.h  Shape.h  ShapeVisitor.h
week09/01-visitor/src/: AreaVisitor.cpp  Circle.cpp  Rectangle.cpp
week11/: .gitignore
week11/00-docker_base_commands/: hello-world.sh
week11/01-simple_web/: Dockerfile  app.py  docker-compose.yaml
week11/02-user_volume/: Dockerfile
week11/03-arg_env/: Dockerfile
week11/04-network/: script.sh
week11/05-volumes/: script.sh
week11/06-docker_compose/: README.md  app.py  docker-compose.yml
week11/07/: docker-compose.yml
week13/01-hello_ci/: task.yml
week13/02-workflow/: task.yml
week13/03-artifacts/: task.yml
week13/04-ci_env_variables/: task.yml
week13/05-parallel_tasks/: task.yml
week13/06-anchors/: task.yml
week14/: .envrc  Dockerfile  docker-compose.yaml  hosts.ini  playbook.yaml
(+11 files in other folders)
